<resources>
    <string name="app_name">TicTacToe</string>
    <string name="ok">OK</string>
    <string name="reset">Reset</string>
    <string name="menu">Menu</string>
    <string name="xx_turn">%1$s turn</string>
    <string name="xx_win">%1$s Wins!</string>
    <string name="xx_score">%1$s score %2$s</string>
    <string name="draw">It\'s a draw!!</string>
    <string name="reset_the_game">Reset the game?</string>
    <string name="go_back_menu">Go back to main menu?</string>
    <string name="cancel">Cancel</string>
    <string name="tictactoe3x3">3 X 3</string>
    <string name="tictactoe4x4">4 X 4</string>
    <string name="tictactoe5x5">5 X 5</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>