<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.ui.Home"
    android:gravity="center">

    <TextView
        android:id="@+id/turnText"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="23sp" />

    <com.airbnb.lottie.LottieAnimationView
        android:layout_marginTop="15dp"
        android:id="@+id/animation_view"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:lottie_rawRes="@raw/tictactoe"
        app:lottie_loop="true"
        app:lottie_autoPlay="true" />

    <LinearLayout
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/tictactoe3x3btn"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="@string/tictactoe3x3" />

        <Button
            android:id="@+id/tictactoe4x4btn"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="@string/tictactoe4x4"
            android:layout_below="@id/tictactoe3x3btn" />

        <Button
            android:id="@+id/tictactoe5x5btn"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="@string/tictactoe5x5"
            android:layout_below="@id/tictactoe4x4btn" />
    </LinearLayout>




</TableLayout>