<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    tools:context=".view.ui.Game">

    <TableLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:id="@+id/mainLayout"
        android:background="@color/white"
        android:gravity="center">

        <TextView
            android:id="@+id/turnText"
            android:text="@string/xx_turn"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textSize="23sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_margin="10dp"
            android:gravity="center">

            <TextView
                android:id="@+id/xx_score"
                android:layout_width="110dp"
                android:layout_height="30dp"
                android:layout_marginStart="40dp"
                android:text="@string/xx_score"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/oo_score"
                android:layout_width="110dp"
                android:layout_height="30dp"
                android:layout_marginStart="30dp"
                android:text="@string/xx_score"
                android:textColor="#000000"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="15dp"
            android:gravity="center">

            <Button
                android:id="@+id/btnReset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/reset" />

            <Button
                android:id="@+id/btnMenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu" />
        </LinearLayout>
    </TableLayout>


    <nl.dionsegijn.konfetti.xml.KonfettiView
        android:id="@+id/konfettiView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</RelativeLayout>